--- a/meet/src/SwipeButtons.css
+++ b/meet/src/SwipeButtons.css
@@ -8,5 +8,30 @@
 
 .swipeButtons .MuiIconButton-root {
   background-color: white;
-  box-shadow: 0px 10px 53px 0px rgba(0, 0, 0, 0.5) !important;
+  box-shadow: 0px 10px 53px 0px rgba(0, 0, 0, 0.3) !important;
+}
+
+.swipeButtons__repeat {
+  padding: 3vw im !important;
+  color: #f5b748 !important;
+}
+
+.swipeButtons__left {
+  padding: 3vw im !important;
+  color: #ec5e6f !important;
+}
+
+.swipeButtons__star {
+  padding: 3vw im !important;
+  color: #62b4f9 !important;
+}
+
+.swipeButtons__right {
+  padding: 3vw im !important;
+  color: #76e2b3 !important;
+}
+
+.swipeButtons__lightning {
+  padding: 3vw im !important;
+  color: #948dd1 !important;
 }
